# Agriculture-Forcasting

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/data/cleaned/: cleaned_prices.csv
backend/data/forecasts/: 12_month_forecast.csv
backend/models/: lstm_model.keras  scaler.pkl  xgb_model.pkl
backend/src/: Q1_data_cleaning.py  Q2_eda_and_model.py  Q3_evaluation.py  Q4_business_actions.py  Q5_measure_effectiveness.py  Q6_django_deployment.py  Q7_fastapi_integration.py  Q8_frontend_integration.py  Q9_monitoring.py
frontend/: Dockerfile  README.md  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: PredictionForm.tsx  PriceChart.tsx  StrategyCards.tsx
notebooks/: agri_forecast_complete.ipynb
