[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pmdarima>=2.1.1",
    "prophet>=1.3.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow-cpu>=2.16.0",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
